// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelContainer openTab snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-2 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-4 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-4 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-10 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-10 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-10 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-10 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-10 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-10 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-10 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-10 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-10 .react-tabs__tab-panel {
  display: none;
}

.emotion-10 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-10 .react-tabs__tab {
  font-size: 14px;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <button
            aria-label="display panel 1"
            class="emotion-3"
          >
            close panel-1
          </button>
        </div>
        <div
          class="emotion-4"
        >
          <button
            aria-label="display panel 2"
            class="emotion-3"
          >
            open panel-2
          </button>
        </div>
        <div
          class="emotion-4"
        >
          <button
            aria-label="some action without panel"
            class="emotion-3"
          >
            action
          </button>
        </div>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div>
        <svg
          aria-label="donut graphic value 1 - from 0 tp 1"
          class="emotion-9"
          fill="none"
          height="128"
          role="img"
          stroke="currentcolor"
          stroke-width="2"
          viewBox="0 0 32 32"
          width="128"
        >
          <circle
            cx="16"
            cy="16"
            opacity="0.125"
            r="14"
          />
          <circle
            cx="16"
            cy="16"
            r="14"
            stroke-dasharray="87.96459430051421"
            stroke-dashoffset="0"
            transform="rotate(-90 16 16)"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="rah-animating rah-animating--down rah-animating--to-height-auto"
        style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
      >
        <div
          style=""
        >
          <div
            class="emotion-10"
          >
            <div
              class="react-tabs"
              data-tabs="true"
            >
              <ul
                class="react-tabs__tab-list"
                hidden=""
                role="tablist"
                style="text-align: right;"
              >
                <li
                  aria-controls="react-tabs-1"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  id="react-tabs-0"
                  role="tab"
                >
                  panel-2
                </li>
                <li
                  aria-controls="react-tabs-3"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  id="react-tabs-2"
                  role="tab"
                  tabindex="0"
                >
                  panel-1
                </li>
              </ul>
              <div
                aria-labelledby="react-tabs-0"
                class="react-tabs__tab-panel"
                id="react-tabs-1"
                role="tabpanel"
              />
              <div
                aria-labelledby="react-tabs-2"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="react-tabs-3"
                role="tabpanel"
              >
                <div>
                  <h2>
                    panel 1
                  </h2>
                  <svg
                    aria-label="donut graphic value 0.5 - from 0 tp 1"
                    class="emotion-9"
                    fill="none"
                    height="64"
                    role="img"
                    stroke="currentcolor"
                    stroke-width="2"
                    viewBox="0 0 32 32"
                    width="64"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      opacity="0.125"
                      r="14"
                    />
                    <circle
                      cx="16"
                      cy="16"
                      r="14"
                      stroke-dasharray="87.96459430051421"
                      stroke-dashoffset="43.982297150257104"
                      transform="rotate(-90 16 16)"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelContainer overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-3 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-5 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-5 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-top: 30px;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<div
    class="emotion-0"
    style="width: 100%;"
  >
    <div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <button
              aria-label="display panel 1"
              class="emotion-4"
            >
              open panel-1
            </button>
          </div>
          <div
            class="emotion-5"
          >
            <button
              aria-label="display panel 2"
              class="emotion-4"
            >
              open panel-2
            </button>
          </div>
          <div
            class="emotion-5"
          >
            <button
              aria-label="some action without panel"
              class="emotion-4"
            >
              action
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <div>
          <div
            class="emotion-10"
          >
            <svg
              aria-label="donut graphic value 1 - from 0 tp 1"
              class="emotion-11"
              fill="none"
              height="128"
              role="img"
              stroke="currentcolor"
              stroke-width="2"
              viewBox="0 0 32 32"
              width="128"
            >
              <circle
                cx="16"
                cy="16"
                opacity="0.125"
                r="14"
              />
              <circle
                cx="16"
                cy="16"
                r="14"
                stroke-dasharray="87.96459430051421"
                stroke-dashoffset="0"
                transform="rotate(-90 16 16)"
              />
            </svg>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelContainer visibleTabs snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-2 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-4 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-4 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <button
            aria-label="display panel 1"
            class="emotion-3"
          >
            open panel-1
          </button>
        </div>
        <div
          class="emotion-4"
        >
          <button
            aria-label="display panel 2"
            class="emotion-3"
          >
            open panel-2
          </button>
        </div>
        <div
          class="emotion-4"
        >
          <button
            aria-label="some action without panel"
            class="emotion-3"
          >
            action
          </button>
        </div>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div>
        <svg
          aria-label="donut graphic value 1 - from 0 tp 1"
          class="emotion-9"
          fill="none"
          height="128"
          role="img"
          stroke="currentcolor"
          stroke-width="2"
          viewBox="0 0 32 32"
          width="128"
        >
          <circle
            cx="16"
            cy="16"
            opacity="0.125"
            r="14"
          />
          <circle
            cx="16"
            cy="16"
            r="14"
            stroke-dasharray="87.96459430051421"
            stroke-dashoffset="0"
            transform="rotate(-90 16 16)"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
